# GeoAI

./: .gitignore  README.md  architecture.md  pyproject.toml
benchmarks/: latest-metrics.json  run.py
configs/: a100_full.yaml  base.yaml  baseline.yaml  h100_atlas.yaml  local_rtx3060_20k.yaml  local_rtx3060_20k_live.yaml  runpod_a100_vitl_1epoch.yaml  runpod_a100_vitl_400k.yaml  smoke.yaml
configs/autonomy/: local_cycle.yaml  local_loop.yaml  long_run_target.yaml  osv5m_150k_continue.yaml  osv5m_150k_convnext_tiny_resume_192.yaml  osv5m_200k_convnext_small_hierarchical_224.yaml  osv5m_200k_convnext_small_hierarchical_224_a100.yaml  osv5m_250k_convnext_tiny_continue_from_partial.yaml  osv5m_250k_convnext_tiny_geo_v2_224.yaml  osv5m_250k_convnext_tiny_resume_192.yaml  osv5m_500k_convnext_tiny_geo_v2_224_resume.yaml  osv5m_50k_2ep.yaml  osv5m_50k_convnext_tiny_geo_v2_224_pretrained_scratch.yaml  osv5m_50k_convnext_tiny_geo_v2_224_scratch.yaml  osv5m_50k_local.yaml  osv5m_50k_sweep.yaml  (+1 more)
data/: manifest.example.csv
scripts/: _bootstrap.py  a100_full_run.sh  a100_parallel_download.py  a100_prepare_and_train.py  benchmark_dataloader.py  benchmark_training_speed.py  bootstrap_open_geodata.py  build_benchmark_subset.py  download_dataset.py  live_training_dashboard.py  plot_training_curves.py  predict_image.py  prepare_osv5m_subset.py  run_architecture_sweep.py  run_autolab.py  run_autonomy.py  run_smoke_test.py  runpod_a100_one_epoch.sh  start_live_training.py  train.py  train_once.py
tests/: test_geo.py  test_pipeline_units.py  test_zip_dataset.py
(+74 files in other folders)
