[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geobot-superhuman"
version = "0.1.0"
description = "Open-data visual geolocation training pipeline designed for GeoGuessr-style reasoning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "Pillow>=10.0",
  "pyarrow>=16.0",
  "PyYAML>=6.0",
  "requests>=2.32",
  "torch>=2.8.0",
]

[project.optional-dependencies]
accelerated = [
  "psutil>=5.9",
  "timm>=1.0.16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
